k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: koko-prew
spec:
  ports:
    - port: 80
  selector:
    app: koko-prew
  type: ClusterIP
